--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -2467,5 +2467,11 @@
         <target>Community Dashboard</target>
       </segment>
     </unit>
+    <unit id="WYUDnxB" name="Team">
+      <segment>
+        <source>Team</source>
+        <target>Team</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
